k8s-manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: omarz1/finalproject:backend4
          volumeMounts:
            - name: backend-persistent-storage
              mountPath: /data
      imagePullSecrets:
        - name: image-pull-auth
      volumes:
        - name: backend-persistent-storage
          persistentVolumeClaim:
            claimName: backend-pvc
