k8s-manifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "omarz1/finalproject:frontend"  
          ports:
            - containerPort: 5001
      imagePullSecrets:
        - name: image-pull-auth
