k8s-manifests/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-development
  labels:
    app: mysql-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-development
  template:
    metadata:
      labels:
        app: mysql-development
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.17
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
