k8s-manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
  type: ClusterIP
