k8s-manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 5001
      nodePort: 30009  
  type: NodePort
