k8s-manifests/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-development
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-development
  type: ClusterIP
